<resources>
    <string name="app_name">NoteTaker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_notes">Notes</string>
    <string name="menu_countnotes">Statistics</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Sign out</string>

    <string name="menu_button">Open menu</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>

    <string name="login_activity_name">Login</string>
    <string name="login_email_hint">
        E-mail address
    </string>
    <string name="login_password_hint">
        Password
    </string>
    <string name="login_button">
        Login
    </string>
    <string name="login_register_button">
        Create account
    </string>

    <string name="register_activity_name">Register</string>
    <string name="register_email_hint">
        E-mail address
    </string>
    <string name="register_password_hint">
        Password
    </string>
    <string name="register_password_again_hint">
        Password again
    </string>
    <string name="register_button">
        Register
    </string>

    <string name="note_creator_title">
        Title
    </string>
    <string name="note_creator_content">
        Content
    </string>
    <string name="note_creator_alertAt">
        Alert at
    </string>
    <string name="note_creator_set_date">
        Set date
    </string>
    <string name="note_creator_create">
        Create
    </string>
    <string name="note_creator_create_continue">
        Create and continue
    </string>

    <string name="notes_finished">
        Finished
    </string>
    <string name="notes_delete">
        Delete
    </string>

    <string name="countnotes_text">
        Total notes count:
    </string>

    <string name="channel_name">
        Note notification
    </string>
    <string name="channel_description">
        Notifications about notes
    </string>
</resources>