<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/notes_icon"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_countnotes"
            android:icon="@drawable/ic_camera_black_24dp"
            android:title="@string/menu_countnotes" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:title="@string/menu_logout" />
    </group>
</menu>